# mobius

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENSE  README.md  Untitled-6.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  design_protocol.yaml  environment.yaml  pyproject.toml  setup.py
.github/workflows/: clone.yml
data/: dpps.csv  e-descriptors.csv  extended_dpps.csv  extended_z_scale.csv  vhse.csv  z_scale.csv
data/benchmark/: 100-8-9-10-11-mers_SeqGA_ei_tanimoto_map4.csv  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  bo_sequence-ga_ei_tanimoto_map4.py  bo_sequence-ga_ei_tanimoto_map4_temp-1.0.py  data_100-9-mers_SeqGA_ei_mattern32_pca_3.csv  data_100-9-mers_SeqGA_ei_mattern32_pca_6.csv  data_100-9-mers_SeqGA_ei_mattern32_pca_7.csv  data_100-9-mers_SeqGA_ei_mattern32_pca_8.csv  data_100-9-mers_SeqGA_ei_mattern32_pca_9.csv  data_100-9-mers_SeqGA_ei_rbf_dpps_0.csv  data_100-9-mers_SeqGA_ei_rbf_dpps_4.csv  data_100-9-mers_SeqGA_ei_rbf_extended-z-scale_3.csv  data_100-9-mers_SeqGA_ei_rbf_extended-z-scale_4.csv  data_100-9-mers_SeqGA_ei_rbf_extended-z-scale_9.csv  data_100-9-mers_SeqGA_ei_rbf_pca_5.csv  data_100-9-mers_SeqGA_ei_rbf_z-scale_1.csv  (+240 more)
docs/: Makefile
docs/source/: conf.py  (+9 more)
examples/: custom_fingerprint.ipynb  graph_kernels.ipynb  graph_neural_networks.ipynb  hello_world.ipynb  language_model.ipynb  macrocyclic_peptides_permeability.ipynb  multi_objectives.ipynb  non-standard_monomers_and_macrocycles.ipynb  protein_language_model.ipynb
mobius/: __init__.py  acquisition_functions.py  baye.py  damietta.py  descriptors.py  embeddings.py  emulator.py  emulators.py  filters.py  fingerprints.py  forcefield.py  ga.py  gaussian_process.py  generators.py  genetic_algorithm.py  genetic_operators.py  graphs.py  helm.py  helm_genetic_operators.py  helm_genetic_operators.py.bak  kernels.py  mhc.py  mobius.py  oracle.py  planner.py  plotting.py  rosetta.py  sampler.py  surrogate_model.py  surrogate_models.py  utils.py  virtual_target.py
(+1953 files in other folders)
